...
    @IBAction func menuAddDidTap(_ sender: UIBarButtonItem) {
        let alert = UIAlertController(title: "新規タスク", message: "", preferredStyle: .alert)
        // 入力用テキストボックスを追加
        alert.addTextField()
        // キャンセルできるようにする
        alert.addAction(UIAlertAction(title: "キャンセル", style: .cancel))
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { _ in
            // 何も入力されていなかったらタスク登録しない
            guard let newTaskName = alert.textFields?.first?.text?.trimmingCharacters(in: .whitespaces), !newTaskName.isEmpty else {
                return
            }
            
            // 新規タスクを登録
...
